workspace = { members = ["perlin"] }
[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive", "min_const_generics"] }
cfg-if = "1"
env_logger = "0.11.3"
instant = "0.1.12"
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.19.4"
winit = "0.29.15"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
egui = "0.27.2"
cgmath = "0.18.0"
tobj = { version = "4.0.2", features = [
    "async",
]}
stacker = "0.1.15"
futures-intrusive = "0.5.0"
rfd = "0.14.1"
sdl2 = "0.36.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.19.4", features = ["webgl"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]
